# hum

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  .npmcheckrc  .prettierignore  .remarkrc.cjs  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  codecov.yml  detox.config.js  eslint.config.cjs  eslint.config.mjs  jest.config.js  metro.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.jest.json  tsconfig.json  tsconfig.typecheck.json
.github/scripts/: android_instrumentation.sh
.github/workflows/: check-version-on-tag.yml  ci.yml  jekyll-gh-pages.yml
.husky/: pre-commit
__mocks__/: react-native-svg.js
apps/minimal_lightning/: README.md  index.html  package.json  tsconfig.json
apps/minimal_lightning/src/: main.ts
apps/mobile/: .gitignore  App.tsx  README.md  app.config.ts  app.json  eas.json  metro.config.js  package.json  tsconfig.json
apps/mobile/android/: build.gradle
apps/mobile/android/app/: build.gradle  debug.keystore
apps/mobile/plugins/: with-expo-localization-calendar-fix.js  with-hum-rust.ts  with-matrix-core.ts
apps/mobile/screens/: ChatScreen.tsx  RichInputScreen.tsx
apps/mobile/screens/__tests__/: ChatScreen.test.tsx  RichInputScreen.test.tsx
apps/mobile/setting_screens/: Main.tsx  Theme.tsx  index.ts
apps/mobile/src/: DevNativeBridgeScreen.tsx  DevToolsOverlay.tsx
apps/mobile/src/hum/: HumClientProvider.tsx  MockClient.ts  mock-data.json  nativeClient.ts  types.ts
apps/mobile/src/navigation/: index.tsx
apps/mobile/src/rich-text/: index.ts  message.ts  sanitize.ts
apps/mobile/src/screens/: ChatsListMock.tsx  ConversationMock.tsx  SettingsMock.tsx  ShellMock.tsx  WelcomeScreen.tsx
apps/storybook/: app.json  assets-registry.ts  package.json  react-native-safe-area-context.tsx  react-native-svg.tsx  tsconfig.json  vite.config.ts
apps/storybook/.storybook/: main.ts  preview.ts  preview.tsx  theme.js
apps/storybook/e2e/: smoke.spec.ts
apps/storybook/react-native-assets-registry/: index.ts  registry.ts
apps/storybook/src/polyfills/: expoEnsureNativeModulesAreInstalled.ts  react-native-web.ts
apps/storybook/stories/: accordion.stories.tsx
apps/storybook/storybook/: index.ts
apps/storybook/storybook/stories/: BottomNavItem.stories.tsx  BottomNavigation.stories.tsx  BottomSlidingInOverlayScreen.stories.tsx  CallItem.stories.tsx  CallsScreen.stories.tsx  ChatItem.stories.tsx  ChatScreen.stories.tsx  ChatView.stories.tsx  Chats.stories.tsx  (+42 more)
assets/fonts/: README.md
assets/fonts/Inter/: OFL.txt
detox/: jest.config.js  native_bridge.spec.js  setup.js
docs/: _config.yml  dev-client.md  dev-setup.md  i18n.md  index.md  mobile-ci-cd.md  package-scoping.md  push-contract.md
docs-legacy/: a11y-checklist.md  dev-setup.md
docs-legacy/adr/: 0001-record-architecture-decisions.md
docs/adr/: 0001-record-architecture-decisions.md  0002-react-native-expo-dev-client.md  0003-rust-core.md  0004-lightning-deep-link-first.md  0005-matrix-federation.md  README.md
docs/api/: index.md  lightning.md  matrix.md  plugins.md
docs/community/: code-of-conduct.md  governance.md  index.md  license.md
docs/configuration/: index.md  theming.md
docs/development/: architecture.md  contributing.md  dev_client.md  i18n.md  index.md  packages.md  testing.md  theming.md
docs/overview/: index.md  key-concepts.md  roadmap.md  what-is-hum.md
docs/ui-previews/conversation/: README.md
docs/usage/: first-steps.md  index.md  installation.md  lightning.md
e2e/: jest.config.js  smoke.spec.ts
native/ln-core/: README.md  index.ts  package.json  tsconfig.json  typings.d.ts  with-ln-core.ts
native/ln-core/android/: build.gradle
native/ln-core/ios/: LnCore.podspec  LnCoreModule.swift
native/rust/: CHANGELOG.md  Cargo.toml  FFI_MAPPING.md  README.md  clippy.toml
native/rust/.cargo/: config.toml
native/rust/build-scripts/: Makefile  build-android.sh  build-ios.sh
native/rust/crates/core/: Cargo.toml
native/rust/crates/core-native-node/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
native/rust/crates/core-native-node/src/: lib.rs
native/rust/crates/core/src/: auth.rs  client.rs  config.rs  contacts.rs  devices.rs  error.rs  lib.rs  media.rs  messaging.rs  presence.rs  push.rs  recovery.rs  rooms.rs  timeline.rs  verification.rs
native/rust/crates/core/src/sync/: mod.rs
native/rust/crates/ffi/: Cargo.toml  build.rs
native/rust/crates/ffi/include/: hum.h
native/rust/crates/ffi/src/: c_api.rs  ffi.rs  hum.udl  impls.rs  lib.rs  tests.rs
native/rust/crates/ffi/tests/: client_smoke.rs
native/rust/e2e_tests/: Cargo.toml
native/rust/examples/cli/: Cargo.toml
native/rust/examples/cli/src/: main.rs
native/rust/matrix_core/: Cargo.toml  FFI.md  README.md
native/rust/matrix_core/src/: config.rs  error.rs  events.rs  lib.rs  session.rs  store.rs
native/rust/matrix_core/src/store/: mem.rs  sqlite.rs
native/rust/matrix_engine/: Cargo.toml  README.md
native/rust/matrix_engine/src/: lib.rs
native/rust/scripts/: build-android.sh  build-ios.sh  gen-bindings.sh
native/rust/tests/: Cargo.toml
native/rust/tests/src/: lib.rs
native/rust/tests/tests/: e2e_login_sync.rs  e2e_send_message.rs
scripts/: gen-build-info.cjs  i18n-missing.cjs  sync-version.cjs  version-utils.cjs
src/components/settings/: SettingsListItem.tsx
src/components/shell/: TabBarMock.tsx
src/screens/: ShellMock.tsx
tests/: App.test.tsx  DevNativeBridgeScreen.test.tsx  HumClientProvider.test.tsx  MockClient.test.ts  breez-sdk-liquid.d.ts  breez-sdk.d.ts  jest.setup.ts  react-native.d.ts  rich-text-e2e.test.ts  rich-text.test.ts
tests/__mocks__/: svgMock.tsx
tests/__mocks__/@10play/: tentap-editor.tsx
tests/detox/: jest.config.js  setup.js
tests/mobile/src/: example.test.ts
tests/mocks/: BootstrapIcon.tsx  ReactNativeSVG.tsx
types/: breez-sdk-liquid.d.ts  storybook-react-native.d.ts  svg.d.ts  tentap-editor.d.ts
types/@hum__rich-text/: index.d.ts
(+24 files in other folders)
