[package]
name = "matrix_core"
version = "0.1.0"
edition = "2021"
description = "Core abstractions, models, and storage for Matrix interactions"

[lib]
name = "matrix_core"
path = "src/lib.rs"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
mem-store = []

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[dev-dependencies]
futures = "0.3"
