[package]
name = "matrix_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
matrix-sdk = { version = "0.13", default-features = false, features = ["sqlite", "e2e-encryption", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

# futures-util for stream utilities
futures-util = "0.3"
base64ct = "=1.7.1"

[lib]
name = "matrix_engine"
path = "src/lib.rs"

[[bin]]
name = "mx_demo"
path = "src/bin/mx_demo.rs"
