[package]
name = "hum-tests"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
anyhow = "1"
hum-matrix-core = { path = "../crates/core" }
matrix-sdk = { version = "0.13.0", default-features = false, features = [
    "e2e-encryption",
    "bundled-sqlite",
    "markdown",
    "native-tls",
] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
