[package]
name = "hum-core-native-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
base64 = "0.22"
hum-matrix-ffi = { path = "../ffi" }
url = "2"

[build-dependencies]
napi-build = "2"
