[package]
name = "hum-matrix-core"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", tag = "0.7.0", default-features = false, features = [
    "e2e-encryption",
    "sqlite",
    "experimental-sliding-sync",
    "native-tls",
 ] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
base64ct = "1.7.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
