[package]
name = "hum-matrix-core"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { version = "0.13.0", default-features = false, features = [
    "e2e-encryption",
    "bundled-sqlite",
    "markdown",
    "native-tls",
] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
base64ct = "1.7.1"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
