[package]
name = "hum-matrix-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uniffi = "0.24.3"
hum-matrix-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = "1"

[build-dependencies]
uniffi_build = "0.24.3"

[dev-dependencies]
tempfile = "3"
