[package]
name = "hum-matrix-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hum-matrix-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
thiserror = "1"
serde_json = "1"
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
serde_json = "1"
