[package]
name = "hum-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
hum-matrix-core = { path = "../../crates/core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1"
matrix-sdk = { version = "0.13.0", default-features = false, features = [
    "e2e-encryption",
    "bundled-sqlite",
    "markdown",
    "native-tls",
] }
serde_json = "1"
crossterm = "0.27"
ratatui = "0.26"
